# openrelik-worker-hasher

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/: app.py  tasks.py
test_data/: test.txt
tests/: test_tasks.py
