[tool.poetry]
name = "openrelik-worker-ssdeep"
version = "0.1.0"
description = "OpenRelik worker to calculate SSDeep (context-triggered piecewise hashes) for files."
authors = ["Alexander Jaeger <mail@alexanderjaeger.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^0.12.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
